<resources>
    <string name="app_name">PetCare</string>
    <string name="begin_button">COMENZAR</string>
    <string name="welcome_message">Bienvenido, tu mascota es muy importante para nosotros</string>
    <string name="welcome_image_description">Imagen de bienvenida</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_item_text">Configuración</string>

    <string name="name_tag">Nombre</string>
    <string name="age_tag">Edad</string>
    <string name="sex_tag">Sexo</string>
    <string name="condition_tag">Estado</string>

    <string name="temperature_tag">Temperatura</string>
    <string name="heart_rate_tag">Frecuencia Cardiaca</string>

    <string name="pick_device">Seleccione un dispositivo</string>



    <!-- Valores demostrativos -->
    <string name="name_demo">Rocky</string>
    <string name="age_demo">4</string>
    <string name="sex_demo">Macho</string>
    <string name="condition_demo">Sano</string>
    <string name="temperature_demo">34.9 °C</string>
    <string name="heart_rate_demo">77 rpm</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="background_title">Color de Fondo</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_pet">PetActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>